@@ -1464,6 +1464,9 @@ packet_ver: 25
 //0x080b,18
 //0x080c,6
 
+//2010-02-23aRagexeRE
+0x080f,20
+
 
 //Add new packets here
 //packet_ver: 26
