@@ -5,6 +5,10 @@
 // 	- Details.
 //========================================
 
+03/02/2010
+	r220 [pakpil]
+	* Added new clif_tradeadditem packet. 0xe9 -> 0x80f.
+
 02/28/2010
 	r219 [Rytech]
 	*Fixed the gm_all_skill config setting. You can now safely use it.
